--- a/Client/package.json
+++ b/Client/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:dev": "webpack-dev-server --mode=development"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,9 @@
   },
   "homepage": "https://github.com/Luguan/Rito-TDWR#readme",
   "devDependencies": {
+    "css-loader": "^0.28.11",
+    "vue-loader": "^15.2.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4"
   },
