almost working setup

--- a/Client/package.json
+++ b/Client/package.json
@@ -22,7 +22,8 @@
     "vue-loader": "^15.2.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.10.1",
-    "webpack-cli": "^2.1.4"
+    "webpack-cli": "^2.1.4",
+    "webpack-dev-server": "^3.1.4"
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0"
