--- a/Client/package.json
+++ b/Client/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
-    "vue": "^2.5.16"
+    "vue": "^2.5.16",
+    "vue-router": "^3.0.1"
   }
 }
