--- a/Client/package.json
+++ b/Client/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:dev": "webpack-dev-server --mode=development"
+    "start": "webpack-serve"
   },
   "repository": {
     "type": "git",
@@ -19,12 +19,14 @@
   "homepage": "https://github.com/Luguan/Rito-TDWR#readme",
   "devDependencies": {
     "babel-loader": "^7.1.4",
+    "connect-history-api-fallback": "^1.5.0",
     "css-loader": "^0.28.11",
+    "koa-connect": "^2.0.1",
     "vue-loader": "^15.2.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
-    "webpack-dev-server": "^3.1.4"
+    "webpack-serve": "^1.0.2"
   },
   "dependencies": {
     "html-webpack-plugin": "^3.2.0",
